# nitpickers

./: .auditignore  .dockerignore  .env.example  .gitignore  ARCHITECT_CRITIC_REVIEW.md  DEV_FLOWS.md  Dockerfile  LICENSE  LOG_ANALYSIS.md  README.md  README_DEVELOPER.md  REPORT.md  _docker-compose.yml  ac-cdd.code-workspace  analyze_tests.py  benchmark_read_src_files.py  check_coverage.py  check_last_activity.py  check_session_status.py  docker-compose.yml  entrypoint.sh  extract_cycles.py  fix.py  fix_architect.py  fix_mypy.py  fix_mypy_issues.py  fix_test_imports.py  fix_test_mcp.py  fix_test_routers.py  fix_tests.py  install_anthropic.sh  mypy.ini  nitpickers.code-workspace  patch.diff  patch_architect.py  patch_audit_orch.py  patch_audit_orch_2.py  patch_auditor_usecase.py  patch_coder_usecase.py  patch_critic.py  (+41 more)
.ac_cdd/: .env.example  project_state_local.json
anomaly_analyzer/: .gitignore  pyproject.toml  pytest.ini
anomaly_analyzer/.web/: package.json  reflex.install_frontend_packages.cached  reflex.json  tailwind.config.js
anomaly_analyzer/.web/.react-router/types/: +routes.ts
anomaly_analyzer/.web/app/: root.jsx
anomaly_analyzer/.web/app/routes/: _index.jsx
anomaly_analyzer/.web/styles/: __reflex_global_styles.css
anomaly_analyzer/.web/utils/: components.jsx  context.js
anomaly_analyzer/anomaly_analyzer/: state.py
anomaly_analyzer/anomaly_analyzer/components/: charts.py
anomaly_analyzer/anomaly_analyzer/core/: api_client.py  backtest.py  config.py  db.py  etl.py  stats.py
anomaly_analyzer/anomaly_analyzer/core/domain_models/: __init__.py  analysis.py  api.py
anomaly_analyzer/tests/: test_api_client.py  test_backtest.py  test_db.py  test_e2e.py  test_etl.py  test_state.py  test_stats.py
anomaly_analyzer/tests/mock_data/: jquants_auth.json  jquants_quotes.json  jquants_token.json
dev_documents/: ALL_SPEC.md  USER_TEST_SCENARIO.md  required_envs.json  test_execution_log.txt
scripts/: audit_mocks.py  (+2 more)
src/: cli.py  (+24 more)
(+378 files in other folders)
